<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="611dp"
        android:layout_height="924dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295"
        app:srcCompat="@drawable/lo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:text="@string/test"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="41dp"
        android:layout_height="44dp"
        android:layout_marginBottom="1500dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:srcCompat="@drawable/abc_vector_test" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:text="@string/q1_little_interest_or_pleasure_in_doing_things"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="155dp"
        android:layout_height="62dp"
        android:text="@string/not_at_all"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FBF9F9"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="170dp"
        android:layout_height="66dp"
        android:text="@string/several_days"
        android:textColor="#FAF6F6"
        android:textColorHint="#FFFBFB"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />

    <RadioButton
        android:id="@+id/radioButton8"
        android:layout_width="201dp"
        android:layout_height="85dp"
        android:text="@string/half_of_the_days"
        android:textColor="#FDF9F9"
        android:textColorHint="#FBF8F8"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <RadioButton
        android:id="@+id/radioButton9"
        android:layout_width="180dp"
        android:layout_height="82dp"
        android:text="@string/nearly_every_day"
        android:textColor="#FAF7F7"
        android:textColorHint="#FAF6F6"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />
</androidx.constraintlayout.widget.ConstraintLayout>