<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="497dp"
        android:layout_height="834dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/alone1"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="406dp"
        android:layout_height="351dp"
        android:text="@string/question"
        android:textColor="#613E3E"
        android:textColorHighlight="#090606"
        android:textColorLink="#050303"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

    <Button
        android:id="@+id/button7"
        android:onClick="button7"
        android:layout_width="270dp"
        android:layout_height="81dp"
        android:background="#B703DAC5"
        android:text="@string/take_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />

    <ImageButton
        android:id="@+id/imageButton"
        android:onClick="imageButton"
        android:layout_width="44dp"
        android:layout_height="38dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="128dp"
        android:layout_height="71dp"
        android:text="@string/test"
        android:textColorHighlight="#040000"
        android:textColorHint="#1C1818"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.039" />
</androidx.constraintlayout.widget.ConstraintLayout>