<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="309dp"
        android:layout_height="147dp"
        android:text="select any test above to assess wheather you may suffering from a_specific_issue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="506dp"
        android:layout_height="437dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248"
        app:srcCompat="@drawable/sky"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="339dp"
        android:layout_marginLeft="339dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bbl"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="133dp"
        android:layout_height="57dp"
        android:text="@string/joyify"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/button"
        android:layout_width="174dp"
        android:layout_height="37dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:text="Dipression"
        android:onClick="button"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="147dp"
        android:layout_height="120dp"
        android:layout_marginTop="104dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="207dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194"
        app:srcCompat="@drawable/internet"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/button4"
        android:layout_width="133dp"
        android:layout_height="34dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/internet"
        android:onClick="button4"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="174dp"
        android:layout_height="266dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/suicide" />

    <Button
        android:id="@+id/button5"
        android:layout_width="151dp"
        android:layout_height="37dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="400dp"
        android:text="@string/social"
        android:onClick="button5"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:layout_constraintVertical_bias="0.538" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="165dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415"
        app:srcCompat="@drawable/image" />

    <Button
        android:id="@+id/button6"
        android:layout_width="144dp"
        android:layout_height="42dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="170dp"
        android:layout_marginRight="170dp"
        android:layout_marginBottom="400dp"
        android:text="anxiety"
        android:onClick="button6"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="191dp"
        android:layout_height="107dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641"
        app:srcCompat="@drawable/bipolar" />

    <Button
        android:id="@+id/button8"
        android:layout_width="154dp"
        android:layout_height="39dp"
        android:layout_marginTop="440dp"
        android:text="@string/alcohol_addiction"
        android:onClick="button8"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="179dp"
        android:layout_height="306dp"
        android:layout_marginTop="316dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bipolar" />

    <Button
        android:id="@+id/button9"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:text="@string/bipolar_disorder"
        android:onClick="button9"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button11"
        android:onClick="button11"
        android:layout_width="37dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        android:drawableBottom="@drawable/abc_vector_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="22dp"
        android:layout_height="47dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="113dp"
        android:layout_marginBottom="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>